# 42_libtdd

./: .gitignore  CMakeLists.txt  libtdd.h  memmove.c  split.c  sqrt.c  strjoin.c
test/: CMakeLists.txt  libtdd_test.cpp
